# HuskySetup

./: README.md
Camera System/: PathTracking.py  PathTrackingGPS.py
Wanderer/clearpath_blog-master/wanderer/: CMakeLists.txt
